Changes for 1.4.2:

 - improved not supported values processing (Eugene)
 - fixed processing of user parameters and remote commands having character '%' (Alexei)

Changes for 1.4.1:

 - fixed processing of 'service_state[*]' (Eugene)
 - fixed PostgreSQL database upgrade script (Alexei)
 - adde support of non standard PostgreSQL & MySQL ports (Eugene)
 - fixed compilation of ZABBIX server under HP-UX (Alexei)
 - fixed upgrade of maps without backgrounds (Alexei)
 - improved UserParameters for Win32 (Eugene)
 - fixed location of the manual and added link to support (Alexei)
 - check timeouted item only after 4*delay seconds (Alexei)
 - fixed several issues in housekeeper (Alexei) 
 - changed properties of text files in SVN repository (Alexei)
 - removed text "Current node [N]" from node selector (Alexei)
 - new release of the Manual (Alexei)
 - removed duplicate index of table httptest (Alexei)
 - fixes for Oracle and SQLite schemas (Alexei)
 - improved main poller loop (Alexei) 
 - fixed int_in_list() function (Alexei)
 - fixed and improved log monitoring (Eugene)
 - fixed type of items.valuemapid (Alexei)
 - improved Standalone_Template (Alexei)
 - fixed PostgreSQL upgrade patch (Alexei)
 - added loop protection in selection of slave nodes (Alexei)
 - change delimiter for DM data transfers to 0xFF (Alexei)
 - better reporting of DM data transfers in log file (Alexei)
 - added better error reporting in zbx_malloc() (Alexei)
 - fixed transfer of NULL values between nodes (Alexei)
 - minor Oracle related fixes for frontend (Alexe)
 - fixed reconnection for jabber notifications (Eugene)
 - fixed incorrect reporting of SMTP error messages (Alexei)
 - filesize[] replaced by vfs.file.size[] in data.sql (Alexei)
 - support of processing of negative data (Alexei)
 - support of negative numbers in trigger expressions (Alexei)
 - more formal logic of execution of trigger expressions (Alexei)
 - server-side support of quotes in item parameters (num_param, get_param) (Alexei)